@@ -1,3 +1,9 @@
+Sat Dec 12 00:35:19 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * tests/DCPS/UnitTests/DisjointSequence.cpp:
+
+          Fixed type name change introduced in previous commit.
+
 Sat Dec 12 00:14:58 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * docs/html/federation/index.html:
